src/style.css
header {
    width: 100%;
    height: 150px;
    background-color: white;
    display: flex;
    align-items: center;
    flex-shrink: 0;
}
header img {
    padding-left: 100px;
    height: 100px;
    padding-right: 2px;
}
header h1 {
    padding-left: 100px;
    text-align: center;
    font-size: 150%;
    padding-right: 25px;
    border-right: 3px solid black;
    width: 400px;
}

header div {
    display: flex;
    align-items: center;
    font-size: 125%;
}

header button {
    background: none;
    border: none;
    text-decoration: none;
    border-right: 3px solid black;
    padding-right: 10px;
    padding-left: 25px;
    font-size: 75%;
}

#help-button, #about-button {
    font-size: 100%;
}

header button:hover {
    cursor: pointer;
}

header div a {
    color: black;
    text-decoration: none;
    padding-right: 10px;
    border-right: 3px solid black;
    padding-left: 25px;
}

#header-info {
    margin-left: auto;
    padding-right: 100px;
    align-items: center;
    display: flex;
    padding-right: 20px;
}

body {
    display: flex;
    flex-direction: column;
    margin: 0;
    height: 100vh;
}

#main-content {
    display: flex;
    flex: 1;
    min-height: 0;
}

aside {
    border: 4px solid black;
    width: 260px;
    background-color: #ECE1CE;
    text-align: center;
}

aside h1 {
    border-bottom: 4px solid black;
    padding-bottom: 20px;
}

aside h2 {
    margin-top: 10px;
    margin-inline: 20px;
    width: fit-content;
}

aside div {
    display: flex;
}

aside label {
    font-size: 110%;
}

aside #display-container div.Topics {
    font-size: 175%;
    font-weight: bold;
}

#sigma-container {
    border: 2px solid black;
    flex: 3;
    position: relative;
    background-color: #FFFFFF;
}

/*
    This is where the node information appears on the right-hand side of the screen
*/
#info-container {
    padding-left: 4px;
    border: 2px solid black;
    flex: 1.25;
    width: 260px;
    background-color: #ECE1CE;
    font-size: 150%;
    max-height: 100vh;
    overflow-y: auto;
}

/*
    This is the container that shows the node info when you hover it
*/
#snippet-container {
    position: absolute;
    pointer-events: none;
    background: white;
    border: 2px solid black; 
    z-index: 9999;
    min-width: 150px;
}

/*
    This  is the left side container. It is appended its information
    from sigma.js
*/
#display-container {
    height: 100%;
    display: flex;
    flex-direction: column;
    width: 260px;
    overflow-y: auto;
    direction: rtl;
}

#display-container > * {
    direction: ltr;
}



/*So the text boxes on years isn't too wide */
#display-container div input {
    width: 40px;
}

/*
    This is for the help window
*/
#help-window {
    width: 725px;
    height: flex;
    border: 4px solid black;
    z-index: 9999;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #ECE1CE;
    display: none;
}

#about-window {
    width: 50%;
    height: 80%;
    border: 4px solid black;
    z-index: 9999;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #ECE1CE;
    display: none;
    padding: 20px;
    overflow-y: auto;
}

#about-window p {
    font-size: 150%;
}

#about-window table {
    margin: 0 auto;
    font-size: 125%;
}

#about-window th {
    border: 4px solid black;
    padding: 4px;
    font-weight: bold;
}

#about-window td {
    border: 4px solid black;
    padding: 3px;
}

.close-about-window {
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
}

.close-about-window img {
    width: 32px;
    height: 32px;
    display: block;
}


#about-window button {
    float: right;
    height: 30px;
    width: 30px;
}

.close-help-window {
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
}

.close-help-window img {
    width: 32px;
    height: 32px;
    display: block;
}


#help-window button {
    float: right;
    height: 30px;
    width: 30px;
}



body {
    display: flex;
    margin: 0;
    height: 100vh;
}

label {
    font-size: 80%;
}

.required {
    color: red;
}

.subtopic-container {
    width: 100%;
    display: block;
}

.topic-row {
    width: 100%;
    display: block;
}

.topic-row label {
    font-size: 50%;
}

